[gd_scene load_steps=3 format=3 uid="uid://chandler001"]

[ext_resource type="Script" path="res://InteractiveHandler.gd" id="1_handler"]
[ext_resource type="Texture2D" path="res://Assets/Handler.PNG" id="2_handler"]

[sub_resource type="CircleShape2D" id="CircleShape2D_handler"]
radius = 50.0

[node name="Handler" type="Area2D"]
script = ExtResource("1_handler")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.0825, 0.0825)
texture = ExtResource("2_handler")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_handler")

[node name="PromptLabel" type="Label" parent="."]
offset_left = -25.0
offset_top = -80.0
offset_right = 25.0
offset_bottom = -55.0
text = "Press F"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]